# wm

./: .gitignore  Cargo.toml  TODO  run.sh  xinitrc
src/: client.rs  comm.rs  container.rs  display.rs  error.rs  ffi.rs  keyboard.rs  keysym.rs  layout.rs  main.rs  manager.rs  monitor.rs  painter.rs  pane.rs  rect.rs  slab.rs  tag.rs  tree.rs  window.rs  wm.rs
src/kb/: keysym.rs  mod.rs
tests/: todo
