[package]
name = "wm"
version = "0.1.0"
authors = ["Spencer Powell <krornus@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
xcb = { version = "1.0.0-beta", features = ["xkb"] }
xkbcommon = { version = "0.5.0-beta", features = ["x11"] }
state = "0.5"
thiserror = "1.0"
signal-hook = "0.3.13"
libc = "0.2"
