[package]
name = "wm"
version = "0.1.0"
authors = ["Spencer Powell <krornus@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
xcb = { version = "1.1", features = ["randr"] }
thiserror = "1.0"
signal-hook = "0.3"
libc = "0.2"
fork = "0.1"
shlex = "1.1"
slab = "0.4"
bitvec = "1"
bitflags = "1.3"
